crates/contextdb-core/tests/fixtures/compile_fail/assign_u64_to_rowid.rs
use contextdb_core::RowId;

fn main() {
    let x: u64 = 42;
    let _r: RowId = x;
}
